--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     dataBinding {
@@ -36,6 +37,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    // Dagger2
+    
+
     compile 'com.android.support:appcompat-v7:27.+'
     compile 'com.android.support:design:27.+'
     compile 'org.jetbrains.anko:anko-sdk15:0.9'
@@ -53,5 +57,9 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile 'com.google.dagger:dagger-compiler:2.7'
+    compile 'com.google.dagger:dagger:2.7'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:cardview-v7:25.0.0'
     testCompile 'junit:junit:4.12'
 }
