--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     defaultConfig {
         applicationId "sample.achar.kotlin.kotlin_wechat_sample"
         minSdkVersion 15
-        targetSdkVersion 27
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -61,5 +61,6 @@ dependencies {
     compile 'com.google.dagger:dagger:2.7'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:cardview-v7:25.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     testCompile 'junit:junit:4.12'
 }
